<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_help"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.caleb.mineseeker.Help"
    android:background="@drawable/helpimg">

    <TextView
        android:text="@string/text1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView2"
        android:layout_marginRight="296dp"
        android:layout_marginEnd="296dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="35dp"
        android:textStyle="normal|bold"
        android:textColor="@android:color/white" />

    <TextView
        android:text="@string/text2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView4"
        android:textColorLink="?attr/colorBackgroundFloating"
        android:textColor="@android:color/background_light"
        android:layout_marginRight="283dp"
        android:layout_marginEnd="283dp"
        android:layout_below="@+id/textView2"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="24dp" />

    <TextView
        android:text="@string/help2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView5"
        android:textSize="30sp"
        android:layout_marginRight="23dp"
        android:layout_marginEnd="23dp"
        android:layout_alignTop="@+id/textView2"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:textStyle="normal|bold|italic"
        android:textColor="@android:color/holo_purple" />

    <TextView
        android:text="@string/hyper_link_to_276_home_page"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="11dp"
        android:id="@+id/textView6"
        android:layout_below="@+id/textView5"
        android:layout_alignRight="@+id/textView5"
        android:layout_alignEnd="@+id/textView5"
        android:textColor="@android:color/holo_purple" />

    <TextView
        android:text="@string/hypertext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/hyperText"
        android:layout_below="@+id/textView6"
        android:layout_alignLeft="@+id/textView5"
        android:layout_alignStart="@+id/textView5"
        android:layout_marginTop="11dp" />
</RelativeLayout>
