<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_menu"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.caleb.mineseeker.Menu"
    android:background="@drawable/menuimg" >

    <TextView
        android:text="@string/main_menu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/title"
        android:textStyle="normal|bold|italic"
        android:textSize="30sp"
        android:layout_marginTop="17dp"
        android:textColor="@android:color/white"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textAllCaps="true" />

    <Button
        android:text="@string/start_game"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="36dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="34dp"
        android:id="@+id/gameBtn"
        android:layout_below="@+id/title"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textStyle="normal|bold" />

    <Button
        android:text="@string/option"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:id="@+id/optionBtn"
        android:layout_below="@+id/gameBtn"
        android:layout_alignLeft="@+id/gameBtn"
        android:layout_alignStart="@+id/gameBtn"
        android:layout_alignRight="@+id/gameBtn"
        android:layout_alignEnd="@+id/gameBtn"
        android:textStyle="normal|bold" />

    <Button
        android:text="@string/help"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/helpBtn"
        android:layout_marginTop="13dp"
        android:layout_below="@+id/optionBtn"
        android:layout_alignLeft="@+id/optionBtn"
        android:layout_alignStart="@+id/optionBtn"
        android:layout_alignRight="@+id/optionBtn"
        android:layout_alignEnd="@+id/optionBtn"
        android:textStyle="normal|bold" />
</RelativeLayout>
